--- a/src/app/real-ws/tracecluster/trace-cluster/trace-cluster.component.html
+++ b/src/app/real-ws/tracecluster/trace-cluster/trace-cluster.component.html
@@ -21,9 +21,9 @@
             <span class="model-info-box__label">Case Attribute for Clustering</span>
             <div class="model-info-box__value">
                 <mat-form-field>
-                    <mat-select>
-                        <mat-option value="caseindex">Case:index</mat-option>
-<!--                        <mat-option *ngFor="let attr of attributesList"><p>{{attr}}</p></mat-option>-->
+                    <mat-select [(value)]="selectedcaseattr">
+                        <mat-option value="caseindex">responsible</mat-option>
+<!--                        <mat-option *ngFor="let attr of attributesList" [value]="attr">{{attr}}</mat-option>-->
                     </mat-select>
                 </mat-form-field>
             </div>
@@ -51,7 +51,7 @@
                                             <mat-option value="variant_DMM_vec">Variant based DMM (vector)</mat-option>
                                             <mat-option value="variant_avg_vec">Variant based average (vector)
                                             </mat-option>
-                                            <mat-option value="DEG-based">DEG based</mat-option>
+                                            <mat-option value="dfg">DFG based</mat-option>
                                         </mat-select>
                                     </mat-form-field>
                                 </form>
@@ -78,10 +78,10 @@
         <mat-sidenav-content>
             <div ngResizable ngDraggable class="drag-box">
 <!--                &lt;!&ndash;      <div id="my_dataviz" class="drag-box&#45;&#45;content"></div>&ndash;&gt;-->
-                <div echarts id="container" [options]="options" style='height:500px'></div>
+                <div echarts id="container" style='height:650px'></div>
             </div>
             <div ngResizable ngDraggable class="img-box">
-                <mat-grid-list cols="3" rowHeight="100px">
+                <mat-grid-list cols="3" rowHeight="150px">
                     <mat-grid-tile *ngFor="let modelname of namelist">
                         <p class="img-box--content">Model {{modelname}}</p>
 <!--                        <p class="img-box&#45;&#45;content">Model</p>-->
@@ -90,7 +90,7 @@
 
                 <mat-grid-list cols="3" rowHeight="90%">
                     <mat-grid-tile *ngFor="let SvgSanitized of dendrogramSvgSanitizedlist">
-                        <img [src]="SvgSanitized" style='height: 100%; width:auto' class="img-box--content">
+                        <img [src]="SvgSanitized" style='height: 90%; width:auto' class="img-box--content">
                     </mat-grid-tile>
                 </mat-grid-list>
             </div>
