change dendro for receipt log

--- a/src/app/real-ws/tracecluster/dendrogram-graph/dendrogram-graph.component.html
+++ b/src/app/real-ws/tracecluster/dendrogram-graph/dendrogram-graph.component.html
@@ -1,2 +1,4 @@
-<div echarts [options]="options" style="height: 400px;"></div>
+<!--<div echarts [options]="options" style="height: 400px;"></div>-->
+<!--<svg width="960" height="600"></svg>-->
+<div echarts id="container" style="height: 500px"> <p>works</p></div>
 
