--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -96,7 +96,7 @@
 
                         </div>
                     </li>
-                    <li class="nav-item" ngbDropdown [placement]="placement" *ngIf="isProcessModelPage">
+                    <li class="nav-item" ngbDropdown [placement]="placement" >
                         <a class="nav-link position-relative" id="filtering" ngbDropdownToggle>
                             <i class="ft-filter font-medium-3 blue-grey darken-4"></i>
                             <p class="d-none">Filtering</p>
